# imagemangler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
imagemangler/: cli.py
imagemangler/core/: mangler.py
tests/: conftest.py  test_cli.py
